--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -7,6 +7,11 @@
           .title.text-white
             EthermineApp
           %p{class: 'text-white'} With this awesome app you can get the information about a miner
+          .title.text-white
+            You can Get Addresses From Here:
+          %ul 
+            %li
+              %a{href: "https://ethermine.org/", class: 'text-white'}= "Ethermine.org"
         .col-md-6
           .tile.text-white
             Links:
