Adding the edit code, modifying the users controller

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,6 +1,7 @@
 %br
 .container
   .row
+    = link_to 'Edit', edit_user_path(@user.id)
     #sidebar.col-sm-3
       = render 'sidebar'
     #main.col-sm-9
