adding the show file, fixing the route problem, adding new methods to users controllers

--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -16,4 +16,4 @@
         .form-group
           = form.label :password
           = form.text_field :password, class: 'form-control', placeholder: 'put your new password', type: 'password'
-        = form.submit 'Up Date', class: 'btn btn-primary', align: 'center'
+        = form.submit 'Save Changes', class: 'btn btn-primary', align: 'center'
