Adding a new gem, in this case, i going to use PaperClip

--- a/app/views/registration/index.html.haml
+++ b/app/views/registration/index.html.haml
@@ -16,6 +16,10 @@
         .form-group
           = form.label :password
           = form.text_field :password, class: 'form-control', placeholder: 'Your password', type: 'password'
+        .form-group
+          = form.label :avatar
+          = form.file_field :avatar
+        
         - @user.errors.full_messages.each do |msg|
           .alert.alert-danger{role: 'alert'}
             = msg
