--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,7 +2,8 @@
 .container
   .col-xs-10.offset-xs-1.col-md-4.offset-md-4
     .card
-      = link_to image_tag(@user.avatar.url(:med)), @user.avatar.url
+      %div
+        = image_tag(@user.avatar.url, style: 'max-width: 150px', class: 'mx-auto d-block', alt: 'avatar')
       .card-header
         User Information:
         .list-group.list-group-flush
@@ -11,7 +12,7 @@
           .list-group-item=@user.last_name
           .list-group-item=@user.email
       .card-footer
-        .btn.btn-danger
-          = link_to 'Edit', edit_user_path
+        .btn.btn-success.text-white
+          = link_to 'Edit', edit_user_path, class: 'text-white'
         Return to Dashboard
         = link_to 'home', home_index_path
