--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,3 +1,4 @@
+%br
 .container
   .col-xs-10.offset-xs-1.col-md-4.offset-md-4
     .card
@@ -23,3 +24,4 @@
           .alert.alert-danger{role: 'alert'}
             = msg
         = form.submit 'Save Changes', class: 'btn btn-primary', align: 'center'
+        = link_to 'Cancelar', users_path, class: 'btn btn-danger', align: 'center', style: 'margin-left: 50px'
