--- a/app/views/addresses/edit.html.haml
+++ b/app/views/addresses/edit.html.haml
@@ -10,4 +10,10 @@
         .form-group
           = form.label :alias
           = form.text_field :alias, class: 'form-control', placeholder: 'Alias for this address', type: 'text'
-        = form.submit 'Edit Address', class: 'btn btn-primary', align: 'center'
+        - flash.each do |name,msg|
+          .alert.alert-danger{role: 'alert'}= msg
+        = link_to 'Regresar', (:back), class: 'btn btn-primaty'
+        = form.submit 'Edit Address', class: 'btn btn-primary'
+
+
+
