Finalizing the header, footer, show and edit views

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,11 +5,8 @@
   - if current_page?(users_path) || current_page?(addresses_path)
     .form-inline.my-2.my-lg-0
       .float-right
-        = image_tag(@user.avatar.url, style: 'max-width: 80px')
-        .badge.badge-info
-          .badge.badge-pill.badge-dark
-            = show_user_name
-          = link_to 'Edit', edit_user_path(@user.id), class: 'btn btn-success'
-          = link_to 'Log Out', credential_path(1), method: :delete, class: 'btn btn-danger'
-%script
-  $('.dropdown-toggle').dropdown()
+        = image_tag(@user.avatar.url, style: 'max-width: 50px')
+        = show_user_name
+        = link_to 'View Profile', user_path(@user.id), class: 'badge badge-light'
+        = link_to 'Edit Profile', edit_user_path(@user.id), class: 'badge badge-light'
+        = link_to 'Log Out', credential_path(1), method: :delete, class: 'badge badge-danger'
