--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -14,5 +14,4 @@
       .card-footer
         .btn.btn-success.text-white
           = link_to 'Edit', edit_user_path, class: 'text-white'
-        Return to Dashboard
-        = link_to 'home', home_index_path
+        = link_to 'Dashboard', home_index_path, class: 'btn btn-primary', style: 'margin-left: 130px'
