Fixing the update, edit and show user information

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -11,19 +11,24 @@
               You can get Addresses From Here:
             %ul
               %li
-                %a{href: "https://ethermine.org/", class: 'text-white'}= "Ethermine.org"
+                %a{href: "https://ethermine.org/", class: 'text-white'}
+                  Ethermine.org
         .col-md-6
           .title.text-white
             Links:
           %ul
             %li
-              %a{href: "https://rubygems.org/gems/etherclient", class: 'text-white'}= "Etherclient gem"
+              %a{href: "https://rubygems.org/gems/etherclient", class: 'text-white'}
+                Etherclient gem
             %li
-              %a{href: "https://github.com/lacf95/etherclient", class: 'text-white'}= "Etherclient Documentation"
+              %a{href: "https://github.com/lacf95/etherclient", class: 'text-white'} 
+                Etherclient Documentation
             %li
-              %a{href: "https://github.com/lacf95/EthermineApp", class: 'text-white'}= "EthermineApp Documentation"
+              %a{href: "https://github.com/lacf95/EthermineApp", class: 'text-white'}
+                EthermineApp Documentation
             %li
-              %a{href: "https://api.ethermine.org/docs/#api-Miner", class: 'text-white'}= "Ethermine API"
+              %a{href: "https://api.ethermine.org/docs/#api-Miner", class: 'text-white'}
+                Ethermine API
     .footer-copyright.bg-primary
       .container-fuid.text-white
         © 2018 Copyright EthermineAppy
