--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,15 +3,15 @@
   .col-xs-10.offset-xs-1.col-md-4.offset-md-4
     .card
       %div
-        = image_tag(@user.avatar.url, style: 'max-width: 150px', class: 'mx-auto d-block', alt: 'avatar')
+        = image_tag(@current_user.avatar.url, style: 'max-width: 150px', class: 'mx-auto d-block', alt: 'avatar')
       .card-header
         User Information:
         .list-group.list-group-flush
         %br
-          .list-group-item=@user.first_name
-          .list-group-item=@user.last_name
-          .list-group-item=@user.email
+          .list-group-item=@current_user.first_name
+          .list-group-item=@current_user.last_name
+          .list-group-item=@current_user.email
       .card-footer
         .btn.btn-success.text-white
-          = link_to 'Edit', edit_user_path, class: 'text-white'
+          = link_to 'Edit', profile_edit_path, class: 'text-white'
         = link_to 'Dashboard', home_index_path, class: 'btn btn-primary', style: 'margin-left: 130px'
