--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -14,7 +14,7 @@
           .alert.alert-danger{role: 'alert'}
             =msg
         .form-group
-        = link_to 'Regresar', (:back), class: 'btn btn-primaty'
+        = link_to 'Back', (:back), class: 'btn btn-primaty'
         = form.submit 'Add Address', class: 'btn btn-primary', align: 'center'
 
 
