Adding show part for flash messages

--- a/app/views/users/_addresses.html.haml
+++ b/app/views/users/_addresses.html.haml
@@ -11,6 +11,9 @@
         %b
           = link_to 'Send me the confirmation mail again', send_confirm_path
     %br
+    - flash.each do |name,msg|
+      .alert.alert-warning{role: 'alert'}
+        =msg
     - if @addresses.count == 0
       .alert.alert-info
         %p
