--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,34 +1,38 @@
 %br
-  .page-footer.blue.center-on-small-only.bg-info
+.bg-info
+  %br
+  .container
+    .card.text-light.bg-info.border-light.mb-3
+      .card-body
+        .row
+          .col-md-6
+            %small
+              EthermineApp
+              %p{class: 'text-white'} With this awseome app you can get the information about a miner
+              .title
+                You can get Addresses From Here:
+              %ul
+                %li
+                  %a{href: "https://ethermine.org/", class: 'text-white'}
+                    Ethermine.org
+          .col-md-6
+            %small
+              .title.text-white
+                Related links
+              %ul
+                %li
+                  %a{href: "https://rubygems.org/gems/etherclient", class: 'text-white'}
+                    Etherclient gem
+                %li
+                  %a{href: "https://github.com/lacf95/etherclient", class: 'text-white'} 
+                    Etherclient Documentation
+                %li
+                  %a{href: "https://github.com/lacf95/EthermineApp", class: 'text-white'}
+                    EthermineApp Documentation
+                %li
+                  %a{href: "https://api.ethermine.org/docs/#api-Miner", class: 'text-white'}
+                    Ethermine API
     %br
-    .container-fluid
-      .row
-        .col-md-6
-          .title.text-white
-            EthermineApp
-            %p{class: 'text-white'} With this awseome app you can get the information about a miner
-            .title.text-white
-              You can get Addresses From Here:
-            %ul
-              %li
-                %a{href: "https://ethermine.org/", class: 'text-white'}
-                  Ethermine.org
-        .col-md-6
-          .title.text-white
-            Links:
-          %ul
-            %li
-              %a{href: "https://rubygems.org/gems/etherclient", class: 'text-white'}
-                Etherclient gem
-            %li
-              %a{href: "https://github.com/lacf95/etherclient", class: 'text-white'} 
-                Etherclient Documentation
-            %li
-              %a{href: "https://github.com/lacf95/EthermineApp", class: 'text-white'}
-                EthermineApp Documentation
-            %li
-              %a{href: "https://api.ethermine.org/docs/#api-Miner", class: 'text-white'}
-                Ethermine API
-    .footer-copyright.bg-primary
-      .container-fuid.text-white
-        © 2018 Copyright EthermineAppy
+.bg-dark.text-muted.text-center
+  %small
+    © 2018 Copyright EthermineAppy
