--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,10 +1,11 @@
-.navbar.nabvar-dark.bg-info
-  .navbar-brand{id: 'navText'}
-    Ethermine
-    %img{class: 'nav-img'}(src='/assets/doggo.ico')
-  - if current_page?(users_path) || current_page?(addresses_path)
-    .form-inline.my-2.my-lg-0
-      .float-right
-        = image_tag(@current_user.avatar.url, style: 'max-width: 50px')
-        = link_to 'View Profile', profile_path, class: 'badge badge-light'
-        = link_to 'Log Out', credential_path(1), method: :delete, class: 'badge badge-danger'
+.navbar.navbar-expand-lg.navbar-dark.bg-dark
+  .container
+    %a{href: "#{root_path}", class: 'navbar-brand text-light'}
+      %img{class: 'nav-img', style: 'border-radius: 50%'}(src='/assets/doggo.ico')
+      ETHERMINE
+    - if @current_user
+      .form-inline.my-2.my-lg-0
+        .float-right
+          = image_tag(@current_user.avatar.url, style: 'border-radius: 50%', class: 'nav-img')
+          = link_to @current_user.full_name, profile_path, class: 'badge badge-light'
+          = link_to 'Log Out', credential_path(1), method: :delete, class: 'badge badge-danger'
