adding the feature view testing

--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -24,4 +24,4 @@
           .alert.alert-danger{role: 'alert'}
             = msg
         = form.submit 'Save Changes', class: 'btn btn-primary', align: 'center'
-        = link_to 'Cancelar', users_path, class: 'btn btn-danger', align: 'center', style: 'margin-left: 70px'
+        = link_to 'Cancelar', profile_path, class: 'btn btn-danger', align: 'center', style: 'margin-left: 70px'
